dried css code for dash, profile, and index.  fixed profile layout- one overflow issue remains

--- a/tracker_app/static/css/dash.css
+++ b/tracker_app/static/css/dash.css
@@ -41,7 +41,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
-    /* padding: 1.5rem; */
     max-width: 100%;
 }
 
@@ -220,10 +219,6 @@ components
 }
 
 #calorie_tracker > p {
-    margin-left: 1.25rem;
-}
-
-#weight_tracker > p {
     margin-left: 1.25rem;
 }
 
